# Biomedical-Engineering-Project

./: README.md  environment.yaml  pyproject.toml  requirements.txt
docs/: presentation.md  report.md
notebooks/: 01_stationary_regime.ipynb  02_quasistationary_regime.ipynb  03_bpco_pathology.ipynb
src/: __init__.py  boundary_conditions.py  constants.py  geometry.py  quasistationary.py  sationary.py  visualization.py
tests/: __init__.py  test_geometry.py  test_quasistationary.py  test_stationary.py
